[gd_scene load_steps=20 format=3 uid="uid://bn2pi1eq1mvyp"]

[ext_resource type="Script" path="res://Scenes/Player/player.gd" id="1_mkcsp"]
[ext_resource type="Texture2D" uid="uid://gb3nrajq0my8" path="res://assets/tank/tankBody_bigRed_outline.png" id="2_uocki"]
[ext_resource type="AudioStream" uid="uid://dcxf8faakhtmq" path="res://assets/sound/engine.ogg" id="4_olhjw"]
[ext_resource type="PackedScene" uid="uid://d2wvhn6pfhm6w" path="res://Scenes/Component/hurt_box_component.tscn" id="5_hcvmq"]
[ext_resource type="PackedScene" uid="uid://8pwhobx1swnv" path="res://Scenes/Component/health_component.tscn" id="6_l6jc6"]
[ext_resource type="PackedScene" uid="uid://cghqkgbi50djj" path="res://Scenes/Component/weapon_component.tscn" id="7_7qs2s"]
[ext_resource type="PackedScene" uid="uid://dgbc4ofcnkb2s" path="res://Scenes/Object/player_bullet.tscn" id="8_b0okv"]
[ext_resource type="Texture2D" uid="uid://b7oj7a7u60ug8" path="res://assets/VFX/white_glowing_circle.png" id="10_36hxu"]
[ext_resource type="Texture2D" uid="uid://due6bxmuvxryc" path="res://assets/VFX/spotlight_1.png" id="11_ckb2h"]
[ext_resource type="PackedScene" uid="uid://bcx2gtiv30m8d" path="res://Scenes/Component/trail_compoment.tscn" id="11_himwj"]

[sub_resource type="Shader" id="Shader_kc1t1"]
code = "shader_type canvas_item;

uniform bool active;
uniform vec3 flash_color : source_color = vec3(1.0);


void fragment(){
	vec4 t = texture(TEXTURE, UV);
	if (active == true) {
		COLOR = vec4(flash_color, t.a);
	}
	
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ubsoq"]
resource_local_to_scene = true
shader = SubResource("Shader_kc1t1")
shader_parameter/active = false
shader_parameter/flash_color = Color(1, 1, 1, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_qg836"]
radius = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ll6pd"]
radius = 25.0

[sub_resource type="Curve" id="Curve_rjj34"]
_data = [Vector2(0, 0.326046), 0.0, 0.0, 0, 0, Vector2(1, 0.545284), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_adyhb"]
colors = PackedColorArray(0, 0, 0, 0.529412, 0.27, 0.27, 0.27, 0.270588)

[sub_resource type="Animation" id="Animation_k4ekd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_luhix"]
resource_name = "flash"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3edvn"]
_data = {
"RESET": SubResource("Animation_k4ekd"),
"flash": SubResource("Animation_luhix")
}

[node name="Player" type="CharacterBody2D" groups=["Player"]]
z_index = 1
material = SubResource("ShaderMaterial_ubsoq")
collision_layer = 32
collision_mask = 208
script = ExtResource("1_mkcsp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_qg836")

[node name="Base" type="Sprite2D" parent="."]
use_parent_material = true
texture = ExtResource("2_uocki")

[node name="EngineSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_olhjw")
volume_db = -10.0
autoplay = true

[node name="HurtBoxComponent" parent="." instance=ExtResource("5_hcvmq")]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxComponent"]
shape = SubResource("CircleShape2D_ll6pd")

[node name="HealthComponent" parent="." instance=ExtResource("6_l6jc6")]
max_health = 20.0

[node name="WeaponComponent" parent="." instance=ExtResource("7_7qs2s")]
use_parent_material = true
cool_down = 0.4
bullet_scene = ExtResource("8_b0okv")

[node name="Gun" parent="WeaponComponent" index="0"]
use_parent_material = true

[node name="Smoke" type="CPUParticles2D" parent="."]
show_behind_parent = true
position = Vector2(-23, -9)
amount = 20
lifetime = 2.0
randomness = 0.5
texture = ExtResource("10_36hxu")
direction = Vector2(-1, 0)
spread = 5.0
gravity = Vector2(0, 0)
initial_velocity_min = 40.0
initial_velocity_max = 50.0
damping_min = 20.0
damping_max = 40.0
scale_amount_curve = SubResource("Curve_rjj34")
color_ramp = SubResource("Gradient_adyhb")

[node name="TrailCompoment" parent="." instance=ExtResource("11_himwj")]

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = -64
limit_top = -64
limit_right = 2944
limit_bottom = 1470
limit_smoothed = true
position_smoothing_enabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3edvn")
}

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(0.984314, 1, 0, 1)
shadow_enabled = true
shadow_filter = 1
shadow_filter_smooth = 1.0
texture = ExtResource("11_ckb2h")
texture_scale = 5.0

[editable path="WeaponComponent"]
